# json2csv-rs

./: .gitignore  Cargo.toml  object_per_line.ndjson  one_line.ndjson
.github/workflows/: ci.yml
src/: json2csv.rs  main.rs  schema.rs  utils.rs
